# agentic-boilerplate

./: CODING_AGENT.md  README.md  pyproject.toml
agentic_boilerplate/: __init__.py
agentic_boilerplate/config/: __init__.py  settings.py
agentic_boilerplate/context/: __init__.py  manager.py
agentic_boilerplate/core/: __init__.py  agent_loop.py  events.py  session.py  submission.py
agentic_boilerplate/policies/: __init__.py  approval.py
agentic_boilerplate/prompts/: __init__.py  templates.py
agentic_boilerplate/skills/: __init__.py  agent_skill.py  base.py  registry.py
agentic_boilerplate/tools/: __init__.py  base.py  calculator.py  echo.py  registry.py
agentic_boilerplate/ui/: __init__.py  cli.py
examples/: README.md
examples/daily_calendar/: README.md  agent.py  config.yaml
examples/daily_calendar/tools/: calendar_tools.py
examples/daily_news_curator/: README.md  agent.py  config.yaml
examples/daily_news_curator/tools/: news_tools.py
examples/machine_learning_agent/: README.md  agent.py  config.yaml
examples/machine_learning_agent/tools/: __init__.py  ml_tools.py
examples/research_assistant/: README.md  agent.py  config.yaml
examples/research_assistant/tools/: research_tools.py
tests/: test_context.py  test_events.py  test_skills.py  test_tools.py
